fixed overlap of css styling for table row height

--- a/ReactApp/car_rental_react/src/css/style.css
+++ b/ReactApp/car_rental_react/src/css/style.css
@@ -380,6 +380,10 @@
     color: white;
 }
 
+#table-section table {
+    height: 0px;
+}
+
 /*+++++++++++++++++++ ADMIN CAR DETIALS +++++++++++++++++++ */
 
 .car-details {
